--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: opencv-python in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (4.9.0.80)\n",
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.4)\n",
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (2.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install opencv-python numpy pandas"
    ]
@@ -40,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +201,7 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce18.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce119.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce4.png\n",
-      "     Index                                  Chemin de l'image  \\\n",
+      "     Index                                            pathimg  \\\n",
       "0        1  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "1        2  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "2        3  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
@@ -229,7 +214,7 @@
       "167    168  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "168    169  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "\n",
-      "                                      Chemin du masque  \n",
+      "                                              pathmask  \n",
       "0    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
       "1    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
       "2    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
@@ -321,7 +306,7 @@
     "            print(f\"Image associée non trouvée pour : {json_file}\")\n",
     "\n",
     "# Création du DataFrame à partir des informations collectées liste data_info + titre colonne\n",
-    "df = pd.DataFrame(data_info, columns=['Index', 'Chemin de l\\'image', 'Chemin du masque'])\n",
+    "df = pd.DataFrame(data_info, columns=['Index', 'pathimg', 'pathmask'])\n",
     "\n",
     "# Enregistrement du DataFrame au format CSV\n",
     "df.to_csv('informations_masques.csv', index=False)\n",
