--- a/Modeltrain_Unet.ipynb
+++ b/Modeltrain_Unet.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/quentinlandon/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -117,7 +108,7 @@
     "model.fit(x_train, y_train, batch_size=32, epochs=10, validation_data=(x_val, y_val))\n",
     "\n",
     "# Une fois l'entraînement terminé, vous pouvez utiliser le modèle pour effectuer des prédictions sur de nouvelles images.\n",
-    "predictions = model.predict(new_images)\n"
+    "predictions = model.predict(new_images)#à définir \n"
    ]
   }
  ],
@@ -137,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
