--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -2,16 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.4)\n",
+      "Collecting pandas\n",
+      "  Using cached pandas-2.2.1-cp312-cp312-macosx_11_0_arm64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Using cached pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Using cached tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Using cached pandas-2.2.1-cp312-cp312-macosx_11_0_arm64.whl (11.3 MB)\n",
+      "Using cached pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
+      "Using cached tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.1 pytz-2024.1 tzdata-2024.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install numpy pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 30] Read-only file system: 'qlandon'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 46\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# Assurez-vous que le répertoire pour les masques existe, sinon ça le crée\u001b[39;00m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(mask_dir):\n\u001b[0;32m---> 46\u001b[0m     \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmask_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;66;03m# Liste pour stocker les informations sur chaque masque\u001b[39;00m\n\u001b[1;32m     49\u001b[0m data_info \u001b[38;5;241m=\u001b[39m []  \u001b[38;5;66;03m# Initialisation de la liste des informations à inclure dans le DataFrame\u001b[39;00m\n",
+      "File \u001b[0;32m<frozen os>:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n",
+      "File \u001b[0;32m<frozen os>:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n",
+      "File \u001b[0;32m<frozen os>:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n",
+      "File \u001b[0;32m<frozen os>:225\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 30] Read-only file system: 'qlandon'"
+     ]
+    }
+   ],
    "source": [
     "# Définition de la fonction pour convertir un fichier JSON en masque\n",
     "def json_to_mask(json_file):\n",
@@ -53,9 +91,9 @@
     "    return mask\n",
     "\n",
     "# Chemins vers les répertoires\n",
-    "quentin_JSON = '/workspaces/APP_IA_TL_QL_dev/data/label'\n",
-    "quentin_BRUT = '/workspaces/APP_IA_TL_QL_dev/data/Image'\n",
-    "quentin_mask = '/workspaces/APP_IA_TL_QL_dev/data/mask'\n",
+    "quentin_JSON = 'qlandon/APP_IA_TL_QL_dev/data/label'\n",
+    "quentin_BRUT = 'qlandon/APP_IA_TL_QL_dev/data/Image'\n",
+    "quentin_mask = 'qlandon/APP_IA_TL_QL_dev/data/mask'\n",
     "\n",
     "theo_JSON = '/Users/theolambs/APP_IA_TL_QL_dev/data/label'\n",
     "theo_BRUT = '/Users/theolambs/APP_IA_TL_QL_dev/data/Image'\n",
@@ -129,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
