--- a/Model_UNET_keras/Modeltrain_Unet_multiclass_with_keras.ipynb
+++ b/Model_UNET_keras/Modeltrain_Unet_multiclass_with_keras.ipynb
@@ -225,11 +225,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1931783072.py, line 18)",
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 18\u001b[0;36m\u001b[0m\n\u001b[0;31m    recall = recall_score(tr   ue_class.flatten(), predicted_class.flatten(), average='weighted')\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 79\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m option \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     78\u001b[0m     image_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez le chemin de l\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage à visualiser : \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 79\u001b[0m     visualize_result(\u001b[43mmodel\u001b[49m, option, image_path\u001b[38;5;241m=\u001b[39mimage_path)\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     81\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOption invalide.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
@@ -251,7 +254,7 @@
     "        \n",
     "        # Calculer les scores de précision, rappel et F-mesure\n",
     "        precision = precision_score(true_class.flatten(), predicted_class.flatten(), average='weighted')\n",
-    "        recall = recall_score(tr   ue_class.flatten(), predicted_class.flatten(), average='weighted')\n",
+    "        recall = recall_score(true_class.flatten(), predicted_class.flatten(), average='weighted')\n",
     "        f1 = f1_score(true_class.flatten(), predicted_class.flatten(), average='weighted')\n",
     "        \n",
     "        # Afficher les scores\n",
