--- a/Model_UNET_usingkeraslib(fonctionnel)/Modeltrain_Unet_multiclass_keras.ipynb
+++ b/Model_UNET_usingkeraslib(fonctionnel)/Modeltrain_Unet_multiclass_keras.ipynb
@@ -20,12 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importation des librairies "
+    "Définition du modèle, choix des données test/validation, fonction UNet..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,22 +41,8 @@
     "from keras.losses import categorical_crossentropy\n",
     "from keras.optimizers import Adam\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from keras.utils import to_categorical\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Définition du modèle, choix des données test/validation, fonction UNet..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from keras.utils import to_categorical\n",
+    "\n",
     "# Chargement du fichier CSV\n",
     "df = pd.read_csv('/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/informations_masques.csv')\n",
     "\n",
